--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
-gplugins {
+plugins {
     id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.20'
 }
 
 group 'cn.netdiscovery'
@@ -12,5 +13,14 @@ repositories {
 }
 
 dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile "org.jetbrains.kotlin:kotlin-reflect:1.3.20"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+compileKotlin {
+    kotlinOptions.jvmTarget = "1.8"
+}
+compileTestKotlin {
+    kotlinOptions.jvmTarget = "1.8"
 }
